@@ -2,7 +2,8 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 == 11/22/2014 ==
 Trevius: Grouping with Mercenaries is now considerably less buggy.
-Trevius: Fixed an issue with Spell Globals related to high Character IDs. 
+Trevius: Fixed an issue with Spell Globals related to high Character IDs.
+Trevius: Crash fix for Swarm Pets.
 
 == 11/19/2014 ==
 Trevius: Mercenaries now Dismiss, Suspend, Unsuspend, and Die correctly.
